		  include/wx/longlong.h(155): assert "(m_ll >= LONG_MIN) && 
		  (m_ll <= LONG_MAX)" failed: wxLongLong to long conversion
		  loss of precision.
		* Reimplemented "Show Rates On Title" preference.
		* Initial import of new MD4 hash code from emule 0.44a into
		  KnownFile.{cpp,h}.
		* Removed amuleweb html template 12 char password limitation.
		* Small fixes to UTF-8 support patch.

	Rommel:
		* Patch to implement the commands serverconnect and reloadipf
		  in amulecmd.

	ThePolish:
		* i18n amule log lines (server window)
		* amulecmd and webinterface i18n fixes
		* Some win32 fixes (slashes and backslashes)
		* Automake 1.8 fixes
		* Add traditionnal Chinese translation (zh_TW) from Paul (Thanks !)
		* Add it, nl, fr, pl, es, eu, ca translation updates (Thanks to
		  all translators)
		* Fix copyright for alc icons
		* Replace amule, wxCas, alc .ico simple icons by icons group .ico
		* Replace alcc's printf by wxLogMassage
		* Make runtime to be in seconds in amulesig.dat
		* Modify Xas to handle runtime in seconds
		* Modify wxCas to handle runtime in seconds

	Unleashed:
		* cas: some sprintf -> snprintf conversions, ifdef unix specific
		  code, and revert get_path() breakage

	Xaignar:
		* Rewrote the file-hashing thread for greater flexibility and 
		  better error-handling.
		* Imported the parts of Crypto++ needed by aMule, which means 
		  that no external Crypto++ libs are needed anymore.
		* Reworked the systray dialog and fixed the rate-limit bugs 
		  associated with it.
		* Fixed the inverted priority bug in the download queue which 
		  caused low-priority
		  files to get connections before high-priority files.
		* A number of other smaller bugfixes and improvements.

		
	Special Thanks To:
		Lucasvr, for providing fixes for compilation with some wx versions.
		

Version 2.0.0rc5 - The 'Let's recover our release speed' version.
----------
2004-07-18

	deltaHF:
	        * Better sorting of some columns

	Kry: